# Monte_Carlo_Mag

./: .gitignore  =1.11.0  README.md  main.py  minimal_kmc_test.ipynb  pyproject.toml  test_ode_comparison.py
config/: default_params.yaml
notebooks/: explore_parameters.ipynb  minimal_kmc_test.ipynb
scripts/: compare_mc_to_ode.py
src/: __init__.py  antigen.py  clusters.py  events.py  minimal_kmc.py  ode_solver.py  parameters.py  particle.py  simulation.py  visualization.py
tests/: __init__.py  test_antigen.py  test_clusters.py  test_events.py  test_minimal_kmc.py  test_ode_comparison.py  test_parameters.py  test_particle.py  test_simulation.py  test_visualization.py
